# loginguards-win

./: .gitignore  LICENSE  README.md  loginguards-loginguards-win-0.1.0.tgz  loginguards-loginguards-win-2.0.0.tgz  package.json  pnpm-lock.yaml  prompt.txt
assets/LoginGuardsPwdFilter/x64/: README.txt
native/LoginGuardsPwdFilter/: CMakeLists.txt  LoginGuardsPwdFilter.cpp  LoginGuardsPwdFilter.def
src/: apiClient.js  config.js  index.js  installer.js  logger.js  ps.js  service.js  storage.js  tester.js
src/cli/: index.js
src/cli/commands/: check.js  configure.js  install.js  pipe-test.js  test.js  uninstall.js
src/service/: engine.js
src/service/daemon/: loginguardspolicyengine.xml
